# projecteuler

./: projecteuler.cabal  projecteuler.hs  stack.yaml
src/: Main.hs
